@startuml

title __LOCATION's Class Diagram__\n

  namespace com.example.ui {
    namespace ui.location {
      class com.example.ui.ui.location.LocationFragment {
          - icons : int[]
          - listView : ListView
          - mFbWarn : FloatingActionButton
          - people : String[]
          + onCreateView()
          + onViewCreated()
      }
    }
  }
  

  namespace com.example.ui {
    namespace ui.location {
      class com.example.ui.ui.location.LocationFragment.MyBaseAdapter {
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.ui {
    namespace ui.location {
      class com.example.ui.ui.location.LocationViewModel {
          - mText : MutableLiveData<String>
          + LocationViewModel()
          + getText()
      }
    }
  }
  

  com.example.ui.ui.location.LocationFragment -up-|> androidx.fragment.app.Fragment
  com.example.ui.ui.location.LocationFragment o-- com.example.ui.ui.location.LocationViewModel : homeViewModel
  com.example.ui.ui.location.LocationFragment +-down- com.example.ui.ui.location.LocationFragment.MyBaseAdapter
  com.example.ui.ui.location.LocationFragment.MyBaseAdapter -up-|> android.widget.BaseAdapter
  com.example.ui.ui.location.LocationViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
